syntax = "proto3";

package yara;

option go_package = "api/proto";

service YaraScanner {
  rpc ScanFile(Request) returns (ScanFileResponse) {}
  rpc ScanFolder(Request) returns (ScanFolderResponse) {}
  rpc Reload(Empty) returns (Empty) {}
  rpc ScanBlob(stream RequestBlob) returns (ScanFileResponse) {}
}

message RequestBlob{
  bytes blob = 1;
}

message Request {
  string path = 1;
}

message Match {
  string rulename = 1;
  string author = 2;
  string tags = 3;
  string description = 4;
}

message Result {
  string file = 1;
  bool hit = 2;
  repeated Match matches = 3;
}

message ScanFileResponse {
  Result result = 1;
}

message ScanFolderResponse {
  repeated Result result = 1;
}

message Empty {}
